force-app/main/default/objects/Inventory__c/fields/Available_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock__c</fullName>
    <formula>Total_Stock__c - Used_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>