force-app/main/default/objects/Inventory__c/fields/Inventory_No__c.field-meta.xml
<CustomField>
    <fullName>Inventory_No__c</fullName>
    <displayFormat>IN-{0000}</displayFormat>
    <label>Inventory No</label>
    <type>AutoNumber</type>
</CustomField>