force-app/main/default/objects/Inventory__c/fields/Used_Stock__c.field-meta.xml
<CustomField>
    <fullName>Used_Stock__c</fullName>
    <label>Used Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>