force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Warehouse__c</columns>
    <columns>Product__c</columns>
    <columns>Available_Stock__c</columns>
    <columns>Total_Stock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>